# dota-commenting-with-machine-learning

./: .gitignore  README.md  pyproject.toml
dota-commenting/data/: data.py  download_data.md  download_data.py  extract_text.py  main.py  transcribe.py  video_to_audio.py
dota-commenting/notebooks/: downlad-data-tw.ipynb  model.ipynb
