[project]
name = "dota-commenting"
version = "0.1.0"
description = "Diploma on HSE Masters"
authors = [
    {name = "Kirill Filatov",email = "filatovka11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
